--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Asmaraloka - Kanvas Kenangan</title>
+    <title>Asmaraloka - Segelintir Kalimat</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,700;1,400&family=Special+Elite&display=swap');
 
@@ -214,4 +214,5 @@ function startExperience() {
 </script>
 
 </body>
+
 </html>
