--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div class="prolog-title">Prolog.</div>
 
         <p>
-            Asmaraloka, sebuah kata yang lahir dari paduan dua makna agung: asmara yang berarti cinta, dan loka yang bermakna dunia. 
+            Asmaraloka, sebuah kata yang lahir dari perpaduan dua makna agung: asmara yang berarti cinta, dan loka yang bermakna dunia. 
             Maka, asmaraloka adalah semesta di mana cinta berkuasa, sebuah dunia yang hanya dapat dihuni oleh dua insan. 
             Di dalamnya, selalu ada yang menjadi asmara — sang pemberi rasa, dan ada pula yang menjadi loka — sang pemilik ruang, tempat segala perasaan berlabuh dan tumbuh bersama dalam harmoni yang tak terucapkan.
 
@@ -216,3 +216,4 @@ function startExperience() {
 </body>
 
 </html>
+
